# grainflow

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md  create_release.py  grainflowimage.psd  license.txt  package-info.json  package-info.json.in
.github/workflows/: cmake-multi-platform.yml
code/: grainflow.grainRecord.gendsp  grainflow.rateSizePhasor.gendsp  grainflow.record.gendsp  grainflow.sahPhasor.gendsp  grainflow.vbap3dnode.gendsp  grainflow.voice.gendsp
data/: grainflow.speakersetups.json
docs/: Grainflow.voice~.maxref.xml  grainflow.biquad~.maxref.xml  grainflow.chorus~.maxref.xml  grainflow.freeze~.maxref.xml  grainflow.function2D.maxref.xml  grainflow.harmonize~.maxref.xml  grainflow.live~.maxref.xml  grainflow.phasor~.maxref.xml  grainflow.scrubSynth~.maxref.xml  grainflow.sin~.maxref.xml  grainflow.spat.pan~.maxref.xml  grainflow.spatview~.maxref.xml  grainflow.streams~.maxref.xml  grainflow.sustain~.maxref.xml  grainflow.synth~.maxref.xml  grainflow.util.3dspread.maxref.xml  grainflow.util.bphasor~.maxref.xml  grainflow.util.grainRecord~.maxref.xml  grainflow.util.listChange.maxref.xml  grainflow.util.list~.maxref.xml  grainflow.util.multiPan~.maxref.xml  grainflow.util.phasor~.maxref.xml  grainflow.util.randomRangeList.maxref.xml  grainflow.util.rateSizePhasor~.maxref.xml  grainflow.util.record~.maxref.xml  grainflow.util.sahRandom~.maxref.xml  grainflow.util.spatpan~.maxref.xml  grainflow.util.stereoPan~.maxref.xml  grainflow.util.vbap3d.maxref.xml  grainflow.waveform~.maxref.xml  grainflow~.maxref.xml
docs/spat/: grainflow.spat.3dspread.maxref.xml  grainflow.spat.format.maxref.xml  grainflow.spat.pan~.maxref.xml  grainflow.spat.phys.add.maxref.xml  grainflow.spat.phys.drag.maxref.xml  (+9 more)
help/: Grainflow.hello-world.maxhelp  Grainflow.voice~.maxhelp  grainflow.chorus~.maxhelp  grainflow.freeze~.maxhelp  grainflow.function2D.maxhelp  grainflow.gen.env2D.maxpat  grainflow.harmonize~.maxhelp  grainflow.live~.maxhelp  grainflow.moddial.maxhelp  grainflow.scrubSynth~.maxhelp  grainflow.spat.3dspread.maxhelp  grainflow.spat.pan~.maxhelp  grainflow.spat.split.maxhelp  grainflow.streams~.maxhelp  grainflow.sustain.maxpat  grainflow.sustain~.maxhelp  grainflow.synth~.maxhelp  grainflow.util.3dspread.maxhelp  grainflow.util.bphasor~.maxhelp  grainflow.util.genEnv2D.maxhelp  grainflow.util.grainRecord~.maxhelp  grainflow.util.listChange.maxhelp  grainflow.util.list~.maxhelp  grainflow.util.multiPan~.maxhelp  grainflow.util.phasor.maxhelp  grainflow.util.phasor~.maxhelp  grainflow.util.randomRangeList.maxhelp  grainflow.util.rateSizePhasor.maxhelp  grainflow.util.rateSizePhasorClassic~.maxhelp  grainflow.util.rateSizePhasor~.maxhelp  grainflow.util.record~.maxhelp  grainflow.util.sahRandom~.maxhelp  grainflow.util.stereoPan~.maxhelp  grainflow.util.vbap3d.maxhelp  grainflow.vbap3d.maxhelp  grainflow.vbap3d~.maxhelp  grainflow.waveform~.maxhelp  grainflow~.maxhelp
javascript/: _grainflow.spat.js  _grainflow.spatial.js  _grainflowutil.js
jsui/: grainFlow.gui.js  grainFlow.waveform.js  grainFlow.waveform~.js  grainflow.function2D.js  grainflow.moddial.js  grainflow.spatview.js  grainflow.spatview~.js
media/: grainflow.2DEnvelope.aif  grainflow.Blackman.aif  grainflow.FatPluck.aif  grainflow.Hamming.aif  grainflow.Hanning.aif  grainflow.Kaiser.aif  grainflow.Pluck.aif  grainflow.ReverseFatPluck.aif  grainflow.ReversePluck.aif  grainflow.Triangle.aif
misc/: grainflow.speakerExample.json  grainflow.speakerExample.txt  grainflow.speakersetups.json
patchers/: _grainFlow.streamR~.maxpat  _grainflow.harmVoice.maxpat  _grainflow.poly.freezer.maxpat  _grainflow.poly.freezer2.maxpat  _grainflow.poly.maxpat  _grainflow.poly.streams.maxpat  _grainflow.streamReceive~.maxpat  _grainflow.synth_voice.maxpat  _grainflow.vbap3dnode.maxpat  _grainflow_mc~.maxpat  grainflow.3dspread.maxpat  grainflow.bufferView.maxpat  grainflow.chorus~.maxpat  grainflow.freeze~.maxpat  grainflow.harmonize~.maxpat  grainflow.legacy~.maxpat  grainflow.live~.maxpat  grainflow.record~.maxpat  grainflow.scrubSynth~.maxpat  grainflow.streamsclassic~.maxpat  grainflow.streams~.maxpat  grainflow.sustain~.maxpat  grainflow.synth~.maxpat  grainflow.util.bufferPopulate.maxpat  grainflow.util.ezGui.maxpat  grainflow.util.grainRecord~.maxpat  grainflow.util.multiPan~.maxpat  grainflow.util.rateSizePhasor.maxpat  grainflow.util.record~.maxpat  grainflow.util.stereoPan.maxpat  grainflow.util.stereoPan~.maxpat  grainflow.vbap3d.maxpat  grainflow.vbap3d~.maxpat  grainflow2~.maxpat  grainflow~.maxpat
scripts/: removeStyles.py
snippets/: basic.maxsnip  basic_live.maxsnip  grainflow.waveform~.maxsnip
source/min-api/examples/min.conan/: CMakeLists.txt  min.conan.cpp
source/projects/grainflow.phasor_tilde/: CMakeLists.txt  grainflow.phasor_tilde.cpp  grainflow.phasor_tilde.h
source/projects/grainflow.voice_tilde/: CMakeLists.txt  GfMaxBuffer.h  Grainflow.voice_tilde.cpp  Grainflow.voice_tilde.h  Grainflow.voice_tilde_test.cpp  IGfBuffer.h  MspGrain.h  grainflow.h  grainflowMax.h
(+248 files in other folders)
